--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,10 @@ a:hover {
   text-decoration: none;
   color: var(--secondary-color);
 }
-
+nav {
+  font-family: var(--font-h1-title);
+  background-color: var(--bg-color);
+}
 body {
   font-family: var(--font-family);
   background-color: var(--bg-color);
