--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Eczar&family=Gentium+Plus&display=swap');
 
 /* Variables */
 :root {
-  --font-h1-title: "Muli", sans-serf;
+  --font-h1-title: "Muli", sans-serif;
   --font-family: "Quicksand", sans-serif;
+  --helvetica-font: "Helvetica", sans-serif;
+  --baskersville-font: "Baskersville", serif;
+  --impact-font: "Impact", sans-serif;
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #302929;
-  --primary-color: #328640;
-  --secondary-color: #77422b;
+  --primary-color: #75a87e;
+  --secondary-color: #8a4f35;
   --primary-shadow: #8b8eaf;
   --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
+  --skills-bar-multiplier: 5;
 }
 
 html {
@@ -38,13 +43,34 @@ ul {
 a {
   text-decoration: none;
   color: var(--primary-color);
+  position: relative;
+  color: #794242;
+  
 }
 
-a:hover {
-  color: var(--secondary-color);
+
+a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--secondary-color);
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+
 }
 
 nav {
+  transition: 0.5s;
+  padding: 2rem 4rem;
   position: sticky;
   top: 0;
   left: 0;
@@ -52,22 +78,28 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 3.5rem;
+  
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(131, 158, 133, 0.959)
+  
 }
 
 nav h1 {
+  font-family: "Gentium Plus", serif;
+  font-size: 50px;
   color: var(--primary-color);
 }
 
 nav a {
+  font-family: "Gentium Plus", serif;
   color: var(--primary-color);
+  font-size:x-large;
   transition: var(--transition);
 }
 nav a:hover {
   color: var(--secondary-color);
-  border-bottom: 2px solid var(--secondary-color);
+  
+  transition: ease-in .25s;
 }
 
 nav ul {
@@ -79,8 +111,225 @@ nav ul li {
   font-weight: var(--bold-font);
 }
 
+
+.welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  padding-left: 20rem;
+  width: 100%;
+  height: 91vh; 
+
+  font-family:'Times New Roman', Times, serif;
+  font-size: 76px;
+  font-style: oblique;
+  color: #95b6a3;
+  
+  
+  background-image: linear-gradient(62deg, #345743 0%, #181719 100%);
+}
+
+
 body {
-  font-family: var(--font-family);
+
+  font-family: "eczar", serif;
   background-color: var(--bg-color);
-  color:aliceblue
+  color:rgb(227, 242, 255)
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  gap: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  
+  margin: auto;
+  position: right;
+  background-image: linear-gradient(62deg, #181719 0%, #482a66 100%);
+
+}
+
+* {box-sizing:border-box}
+
+.skills h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+.skills h2 {
+  font-size: 18px;
+  
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: auto;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(62deg, #4b5e70 0%, #181719 100%);
+  margin: auto;
+  position: left;
+  text-align: right; 
+  color: white; 
+}
+.port-skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  padding-bottom: 1rem;
+}
+.skills-bar {
+  position: relative;
+  width: 1300%;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #77767646;
+  overflow: hidden;
+  
+}
+.skills-bar::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 0%;
+  height: 100%;
+  border-radius: 50px;
+  background-color: #f5f25f;
+  animation: js-animation 2s forwards;
+}
+
+.port-skill:nth-child(2) .skills-bar::before {
+  background-color: #2745ec;
+  animation: css-animation 2.25s forwards;
+
+}
+.port-skill:nth-child(3) .skills-bar::before {
+  background-color: #df6831;
+  animation: html-animation 2.5s forwards;
+
+}
+.port-skill:nth-child(4) .skills-bar::before {
+  background-color: #6369be;
+  animation: py-animation 2.75s forwards;
+
+}
+.port-skill:nth-child(5) .skills-bar::before {
+  background-color: #29009b;
+  animation: c-animation 3s forwards;
+  
+
+}
+.expandable-content {
+  display: none; /* Hide the content by default */
+  animation: ease-in .25s;
+}
+@keyframes js-animation {
+  100%
+  {
+    width: 60%;
+  }
+}
+@keyframes css-animation {
+  100%
+  {
+    width: 45%;
+  }
+}
+@keyframes html-animation {
+  100%
+  {
+    width: 45%;
+  }
+}
+@keyframes py-animation {
+  100%
+  {
+    width: 30%;
+  }
+}
+@keyframes c-animation {
+  100%
+  {
+    width: 15%;
+  }
+}
+
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  width: 100%;
+  height: auto;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-image: linear-gradient(62deg, #181719 0%, #6e3d6e 100%);
+
+  margin: auto;
+  position: right;
+}
+.lang-descrip {
+  
+  padding-bottom: 1px;
+  font-style: italic;
+}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f5f25f;
+  border: none;
+  color: #000000;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  font-family: "Gentium Plus", serif;
+  font-size: 20px;
+  color: var(--primary-color);
+  
+}
+.proj-text {
+  align-items: center;
+}
+.exp-cont-text {
+  flex: auto;
+  display: none;
+  padding-bottom: 1px;
+  font-style: italic;
+  align-items: center;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  width: 100%;
+  height: 30vh;
+  background-image: linear-gradient(62deg, #90a072 0%, #181719 100%);
+
+  margin: auto;
+  position: right;
 }
